<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/hacedor"
        android:id="@+id/iFoto"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baruno"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tNombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:id="@+id/tDescrip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:id="@+id/tDirecc"/>

    </LinearLayout>

</LinearLayout>